RESOLVED FIXED 150719
[EFL] Fix the debug build after r191758
https://bugs.webkit.org/show_bug.cgi?id=150719
Summary [EFL] Fix the debug build after r191758
Csaba Osztrogonác
Reported 2015-10-30 08:57:11 PDT
http://trac.webkit.org/changeset/191758 broke the debug build: ../../Source/WebCore/Modules/indexeddb/server/MemoryIDBBackingStore.cpp: In member function 'virtual WebCore::IDBError WebCore::IDBServer::MemoryIDBBackingStore::createObjectStore(const WebCore::IDBResourceIdentifier&, const WebCore::IDBObjectStoreInfo&)': ../../Source/WebCore/Modules/indexeddb/server/MemoryIDBBackingStore.cpp:120:143: error: format '%llu' expects argument of type 'long long unsigned int', but argument 4 has type 'uint64_t {aka long unsigned int}' [-Werror=format=] cc1plus: all warnings being treated as errors
Attachments
Patch (1.71 KB, patch)
2015-10-30 08:59 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-10-30 08:59:14 PDT
WebKit Commit Bot
Comment 2 2015-10-30 11:22:18 PDT
Comment on attachment 264397 [details] Patch Clearing flags on attachment: 264397 Committed r191800: <http://trac.webkit.org/changeset/191800>
WebKit Commit Bot
Comment 3 2015-10-30 11:22:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.