[EFL] Fix the debug build after r191758 https://bugs.webkit.org/show_bug.cgi?id=150719

Reviewed by Alex Christensen.

* Modules/indexeddb/server/MemoryIDBBackingStore.cpp:
(WebCore::IDBServer::MemoryIDBBackingStore::createObjectStore):


Canonical link: https://commits.webkit.org/168899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191800 268f45cc-cd09-0410-ab3c-d52691b4dbfc